Quick css fix on mobile and update to deploy date for cache busting

--- a/airbitz/airbitz/static/css/global-stylesheet.css
+++ b/airbitz/airbitz/static/css/global-stylesheet.css
@@ -48,7 +48,7 @@
   position: relative;
   float: left;
   width: auto;
-  margin-left: 10px;
+  margin-left: 25px;
   padding: 0 15px;
 }
 #nav-mobile .mobile-search-form .navbar-form {
