--- a/airbitz/airbitz/static/less/navbar.less
+++ b/airbitz/airbitz/static/less/navbar.less
@@ -66,7 +66,7 @@
         position: relative;
         float: left;
         width: auto;
-        margin-left: 10px;
+        margin-left: 25px;
         padding: 0 15px;
 
         .navbar-form {
